A start on the lc4_single.v

--- a/lab2/lab2.sim/sim_1/behav/xsim.dir/testbench_v_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/lab2/lab2.sim/sim_1/behav/xsim.dir/testbench_v_behav/webtalk/usage_statistics_ext_xsim.html
@@ -2,11 +2,11 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>XSIM Usage Report</H3><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Feb 16 06:48:15 2016</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Feb 23 01:56:53 2016</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2015.4 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1412921</TD>
-  <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211149065_0_0_763</TD>
+  <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>210701949_174115112_210596203_850</TD>
   <TD BGCOLOR='#DBE5F1'><B>tool_flow</B></TD><TD>xsim_vivado</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -14,18 +14,18 @@
   <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>not_applicable</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_package</B></TD><TD>not_applicable</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_speed</B></TD><TD>not_applicable</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>631c4433-32fe-48a2-a31e-126d740e059d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>2616c85a-70c1-4517-b29f-ff6027857e24</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>420eb0f6520b452394b3fec2c2426dec</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
-  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 15.10</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-4870HQ CPU @ 2.50GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2494.226 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
+  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-3720QM CPU @ 2.60GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2594 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
+  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>file_counter=4</TD>
-    <TD>command=xelab</TD>
-    <TD>vhdl2008=false</TD>
-    <TD>gendll=false</TD>
-</TR><TR ALIGN='LEFT'>    <TD>sdfmodeling=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>dpi_used=false</TD>
-    <TD>debug=typical</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>simulation_image_code=31 KB</TD>
-    <TD>simulation_image_data=3 KB</TD>
-    <TD>total_nets=118</TD>
-    <TD>total_processes=44</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=13</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
-    <TD>compiler_time=0.20_sec</TD>
-    <TD>compiler_memory=161236_KB</TD>
+<TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+    <TD>runtime=10217 ns</TD>
+    <TD>iteration=0</TD>
+    <TD>simulation_time=0.25_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>simulation_memory=22336_KB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
